@@ -1,9 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.74 2005/03/01 06:42:39 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.75 2005/03/01 08:01:42 codeman Exp $
 
 *GLI-0.01 (9 Feb 2004)
 
+  1 Mar 2005; Preston Cody <codeman@gentoo.org>
+  Fixed a bunch of true -> True typos.
+  
   1 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
   Commented out 'display_on_tty8=True' in start_portmap()
 
